Closes #8 abbreviation and name in recipe detial
