# src/openapi.json
@@ -2101,7 +2101,8 @@
                                             "name",
                                             "sortNumber",
                                             "value",
-                                            "unitId"
+                                            "unitId",
+                                            "unit"
                                         ],
                                         "properties": {
                                             "id": {
@@ -2129,6 +2130,25 @@
                                                 "type": "integer",
                                                 "format": "int32",
                                                 "minimum": 1
+                                            },
+                                            "unit": {
+                                                "type": "object",
+                                                "required": [
+                                                    "name",
+                                                    "abbreviation"
+                                                ],
+                                                "properties": {
+                                                    "name": {
+                                                        "type": "string",
+                                                        "minLength": 1,
+                                                        "maxLength": 80
+                                                    },
+                                                    "abbreviation": {
+                                                        "type": "string",
+                                                        "minLength": 1,
+                                                        "maxLength": 20
+                                                    }
+                                                }
                                             }
                                         }
                                     }
